# learnopengl

./: .gitignore  CMakeLists.txt  glad.c  main.cpp
includes/: cmake_uninstall.cmake
includes/glad/: glad.h
